header and footer made

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,11 +3,13 @@
 //Colors
 $Slate: #5C667E;
 $Graphite: #232940;
-$Green: #158463;
+$Green: #12D125;
 $Cloud: #BDC5D5;
 $Light-Grey: #F7F8F9;
 $Red: #C94515;
 $White: #FFFFFF;
+$Pink: #F62BB7;
+
 
 //Fonts
 $regularFont: "Titillium Regular";
