--- a/src/components/Camera/Camera.scss
+++ b/src/components/Camera/Camera.scss
@@ -11,6 +11,11 @@
         padding-bottom: 1rem;
     }
 
+    &__title {
+        @include body-large;
+        color: $Green;
+    }
+
     &__border {
         width: 280px;
         border-top: 1px solid $Green;
@@ -21,7 +26,7 @@
     }
 
     &__btn {
-        @include body-medium;
+            @include body-medium;
             background-color: $White;
             border: 4px solid $Green;
             border-radius: 5rem;
@@ -42,5 +47,72 @@
             }
     }
 
-}
+    &__mirror {
+        @include flexBox(row);
+        justify-content: space-between;
+        width: 7rem;
+        padding-bottom: 15px;
+    }
 
+    &__caption {
+        align-self: center;
+        color: $Pink;
+        @include body-large;
+    }
+
+
+
+    &__controls input[type="checkbox"] {
+        display: none;
+        visibility: hidden;
+    }
+
+    &__controls {
+        --size: 60px; 
+    }
+
+    &__controls &__block {
+        position: relative;
+        clear: both;
+        float: left;
+    }
+
+    &__controls label {
+        width: var(--size);
+        height: calc(var(--size) / 2);
+        box-sizing: border-box;
+        border: 3px solid;
+        float: left;
+        border-radius: 100px;
+        position: relative;
+        cursor: pointer;
+        transition: .3s ease;
+        color: $Green;
+    }
+
+    &__controls input[type=checkbox]:checked + label {
+        background: $Green;
+    }
+
+    &__controls input[type=checkbox]:checked + label:before {
+        left: calc(var(--size) / 2);
+    }
+
+    &__controls label:before {
+        transition: .3s ease;
+        content: '';
+        width: calc((var(--size) / 2) - 10px);
+        height: calc((var(--size) / 2) - 10px);
+        position: absolute;
+        background: $Pink;
+        left: 2px;
+        top: 2px;
+        box-sizing: border-box;
+        border: 3px solid;
+        color: $Pink;
+        border-radius: 100px;
+    }
+
+
+
+}
