--- a/src/components/Camera/Camera.scss
+++ b/src/components/Camera/Camera.scss
@@ -147,6 +147,40 @@
         padding-right: 10px;
     }
 
+    &__detect-li.highlight {
+        background-color: rgb(217,245,188);
+        font-weight: bold;
+        border-radius: 0px 0px 20px 20px;
+    }
+
+    &__rx-terms-cont {
+        margin-top: 15px;
+        border: 1px solid $Pink;
+        width: 88vw;
+        @include flexBox(column);
+        border-radius: 20px;
+    }
+
+    &__rx-terms {
+        color: $Pink;
+        @include subheader-style;
+        text-align: center;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    &__rx-terms-para {
+        color: $Pink;
+        @include body-medium;
+    }
+
+    &__rx-terms-li {
+        list-style-type: none;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
 
 
 }
+
