--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,2 +1,91 @@
 @import '../../styles/global';
 
+.contact {
+
+    background-color: $White;
+    @include flexBox(column);
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    &__form-group {
+        margin-bottom: 1rem;
+    }
+
+    &__cont {
+        @include flexBox(row);
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 2rem;
+    }
+
+    &__icon {
+        width: 3rem;
+    }
+
+    &__title {
+        @include header-style;
+        color: $Green;
+        text-align: center;
+    }
+
+    &__border {
+        width: 85%;
+        border-top: 1px solid $Green;
+    }
+
+    &__but-cont {
+        @include flexBox(row);
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__form {
+        width: 100%;
+    }
+
+  }
+  
+  
+  label {
+    font-weight: bold;
+  }
+  
+  input,
+  textarea {
+    width: 100%;
+    padding: 8px;
+    border: 2.5px solid $Pink;
+    border-radius: 10px;
+    margin-top: 0.5rem;
+  }
+
+input:focus,
+textarea:focus {
+  border-color: $Green;
+  outline: none;
+}
+  
+  button {
+    @include body-medium;
+        background-color: $White;
+        border: 4px solid $Green;
+        border-radius: 5rem;
+        color: $Green;
+        height: 2.25rem;
+        width: 8.25rem;
+        text-decoration: none;
+
+        @include flexBox(row);
+        justify-content: center;  
+        align-items: center;
+
+        &:hover{
+            border: 4px solid $Pink;
+            border-radius: 5rem;
+            text-decoration: none;
+            color: $Pink;
+        }
+  }
