--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -6,6 +6,16 @@
     background-color: $White !important;
     border: 3px solid #333;
     border-radius: 5%;
+
+    @include tablet {
+        width: 25rem;
+        border-radius: 2%;
+    }
+
+    @include desktop {
+        width: 30rem;
+        border-radius: 2%;
+    }
 }
   
 .react-calendar__tile {
@@ -31,6 +41,14 @@
     width: 18rem;
     padding-bottom: 1rem;
 
+    @include tablet {
+        width: 25rem;
+    }
+
+    @include desktop {
+        width: 30rem;
+    }
+
     &__title {
         @include header-style;
         color: $Green;
@@ -39,7 +57,7 @@
     &__cont {
         @include flexBox(row);
         align-items: center;
-        padding-bottom: 0.5rem;
+        padding-bottom: 1rem;
         justify-content: center;
     }
 
@@ -65,6 +83,12 @@
         @include flexBox(row);
         justify-content: center;
         gap: 1rem;
+        @include tablet {
+            gap: 8rem;
+        }
+        @include desktop {
+            gap: 10rem;
+        }
     }
 
     &__time-label {
